# serializer

./: frames.avsc  frames.fbs  frames.proto  frames_b64.avsc  plot_results.py  pyproject.toml  race.py
src/serializer/: frame.py  frames_pb2.py  protobuf.py
src/serializer/flatbuffers/flatbuffers/: ByteOrder.py  Frame.py
tests/: test_frame.py
