[project]
name = "serializer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jonathan Olsten", email = "jolsten@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.5",
    "protobuf>=6.31.0",
]

[project.scripts]
serializer = "serializer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
