[project]
name = "serializer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jonathan Olsten", email = "jolsten@gmail.com" }
]
requires-python = ">3.10,<3.13"
dependencies = [
    "avro>=1.12.0",
    "flatbuffers>=25.2.10",
    "matplotlib>=3.10.3",
    "msgpack>=1.1.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "protobuf>=6.31.0",
    "pycapnp>=2.0.0",
]

[project.scripts]
serializer = "serializer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "cython<3",
    "pip>=25.1.1",
    "pytest>=8.3.5",
]
